# dissonia

./: Cargo.toml  README.md
dissonia/: Cargo.toml
dissonia-codec-flac/: Cargo.toml
dissonia-codec-flac/src/: bitwriter.rs  crc.rs  encoder.rs  frame.rs  lib.rs  options.rs  rice.rs  subframe.rs
dissonia-codec-opus/: Cargo.toml
dissonia-codec-opus/src/: encoder.rs  lib.rs  options.rs
dissonia-codec-pcm/: Cargo.toml
dissonia-codec-pcm/src/: encoder.rs  lib.rs  options.rs
dissonia-common/: Cargo.toml
dissonia-common/src/: lib.rs
dissonia-common/src/riff/: mod.rs  write.rs
dissonia-common/src/vorbis/: comments.rs  mod.rs
dissonia-core/: Cargo.toml
dissonia-core/src/: errors.rs  lib.rs  units.rs
dissonia-core/src/audio/: buf.rs  channels.rs  mod.rs  position.rs  sample.rs  spec.rs
dissonia-core/src/codecs/: encoder.rs  mod.rs  parameters.rs
dissonia-core/src/formats/: mod.rs  muxer.rs  track.rs
dissonia-core/src/packet/: encoded.rs  mod.rs
dissonia-format-flac/: Cargo.toml
dissonia-format-flac/src/: lib.rs  metadata.rs  muxer.rs
dissonia-format-ogg/: Cargo.toml
dissonia-format-ogg/src/: lib.rs
dissonia-format-ogg/src/opus/: header.rs  mod.rs  muxer.rs
dissonia-format-riff/: Cargo.toml
dissonia-format-riff/src/: lib.rs
dissonia-format-riff/src/wav/: header.rs  mod.rs  muxer.rs
dissonia/src/: lib.rs
dissonia/tests/: write_ogg_opus.rs  write_wav.rs  write_wav_extensible.rs  write_wav_packetized.rs
