[workspace]
members = [
    "dissonia",
    "dissonia-common",
    "dissonia-core",
    "dissonia-codec-pcm",
    "dissonia-codec-opus",
    "dissonia-format-riff",
    "dissonia-format-ogg",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
module_name_repetitions = "allow"
too_many_arguments = "allow"

[profile.release]
codegen-units = 1
lto = "thin"